# cog-tools

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/: cog.ipynb  main.py
