[project]
name = "cog_tools"
version = "0.0.1"
description = "Some tools to generate COG"
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
]
dependencies = [
    "rasterio>=1.3.9",
    "click>=8.1.7",
    "matplotlib>=3.8.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]  # This is dev dependencies
dev = ["jupyter>=1.0.0",
    "notebook>=7.0.6",
    "jupyterlab>=4.0.9",
    ]
